# mmdet_deploy

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
darknet_ros_msgs/: CMakeLists.txt
darknet_ros_msgs/action/: CheckForObjects.action
darknet_ros_msgs/srv/: CheckForObjects.srv
launch/: mmdet_start_rgb.launch  mmdet_start_thermal.launch  play_rosbag.launch
mmdet_deploy/: CMakeLists.txt  README.md
mmdet_deploy/launch/: mmdet_start_all.launch  mmdet_start_rgb.launch  mmdet_start_thermal.launch  play_rosbag.launch
mmdet_deploy/scripts/: NetTorch.py  mmdet_node.py  utils.py
msg/: BoundingBoxInstance.msg  BoundingBoxesInstances.msg
scripts/: NetTorch.py  mmdet_node.py  utils.py
srv/: CheckForObjects.srv
