<?xml version="1.0"?>
<package format="2">
  <name>mmdet_deploy</name>
  <version>0.0.0</version>
  <description>ROS Nodes for object detection using mmdet with pytorch</description>
   <maintainer email="vijayreddy.samula@alumni.fh-aachen.de">Vijay Reddy</maintainer>
  <author email="vijayreddy.samula@alumni.fh-aachen.de">Vijay Reddy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>boost</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>




</package>
